--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
   <div id="leftColumn">
     <div><a href="https://www.facebook.com">Our Facebook</a></div>
     <div><a href="https://www.facebook.com">Our Twitter</a></div>
+    <div><p style="text-decoration:underline; text-align:center;"><b>Announcements</b></p></div>
+    <ul>
+      <li>&bull; Announcement 1</li>
+      <li>&bull; Announcement 2</li>
+    </ul>
   </div>
 
   <div id="rightColumn">
@@ -37,6 +42,7 @@
     <a class="navbar-item navbar-inactive" href="gigisbio.html">Gigi's Bio</a>
     <a class="navbar-item navbar-inactive" href="specialoffers.html">Special Offers</a>
   </div>
+  <div style="text-align:center;"><img id="gigi" src="img/gigi.jpg"></div>
     <h1>Our Services</h1>
     <div class="section">
             <!-- www.123formbuilder.com script begins here -->
