Add navbar text popout animation, fix non-index page navbar html

--- a/specialoffers.html
+++ b/specialoffers.html
@@ -31,10 +31,10 @@
   <div id="rightColumn">
     <h1>Laundry 101 - Keeping it Clean!</h1>
   <div id="navbar" style="text-align:center;">
-    <a class="navbar-item navbar-active" href="index.html">Services</a>
+    <a class="navbar-item navbar-inactive" href="index.html">Services</a>
     <a class="navbar-item navbar-inactive" href="index.html">Community Pictures</a>
     <a class="navbar-item navbar-inactive" href="index.html">Gigi's Bio</a>
-    <a class="navbar-item navbar-inactive" href="index.html">Special Offers</a>
+    <a class="navbar-item navbar-active" href="index.html">Special Offers</a>
   </div>
   </div>
 
