--- a/communitypictures.html
+++ b/communitypictures.html
@@ -31,8 +31,8 @@
   <div id="rightColumn">
     <h1>Laundry 101 - Keeping it Clean!</h1>
   <div id="navbar" style="text-align:center;">
-    <a class="navbar-item navbar-active" href="index.html">Services</a>
-    <a class="navbar-item navbar-inactive" href="index.html">Community Pictures</a>
+    <a class="navbar-item navbar-inactive" href="index.html">Services</a>
+    <a class="navbar-item navbar-active" href="index.html">Community Pictures</a>
     <a class="navbar-item navbar-inactive" href="index.html">Gigi's Bio</a>
     <a class="navbar-item navbar-inactive" href="index.html">Special Offers</a>
   </div>
