Increase default font-size, add gigi speech slideshow prototype

--- a/index.html
+++ b/index.html
@@ -33,22 +33,24 @@
       <li>&bull; Announcement 2</li>
     </ul>
   </div>
-
+<input>some text</input>
   <div id="rightColumn">
     <h1>Laundry 101 - Keeping it Clean!</h1>
-  <div id="navbar">
-    <a class="navbar-item navbar-active" href="index.html">Services</a>
-    <a class="navbar-item navbar-inactive" href="communitypictures.html">Community Pictures</a>
-    <a class="navbar-item navbar-inactive" href="gigisbio.html">Gigi's Bio</a>
-    <a class="navbar-item navbar-inactive" href="specialoffers.html">Special Offers</a>
-  </div>
-  <div style="text-align:center;"><img id="gigi" src="img/gigi.jpg"></div>
-    <h1>Our Services</h1>
-    <div class="section">
-            <!-- www.123formbuilder.com script begins here -->
-            <script type="text/javascript" defer src="//www.123formbuilder.com/embed/3749019.js" data-role="form" data-default-width="650px"></script>
-            <!-- www.123formbuilder.com script ends here -->
+    <div id="navbar">
+      <a class="navbar-item navbar-active" href="index.html">Services</a>
+      <a class="navbar-item navbar-inactive" href="communitypictures.html">Community Pictures</a>
+      <a class="navbar-item navbar-inactive" href="gigisbio.html">Gigi's Bio</a>
+      <a class="navbar-item navbar-inactive" href="specialoffers.html">Special Offers</a>
     </div>
+    <div>
+      <img style="width:50%; float:left;" id="gigi" src="img/gigi.jpg">
+      <div style="width:50%; float:right;"><p id="gigiSpeech">Hi there!</p></div>
+    </div>
+      <div class="section">
+              <!-- www.123formbuilder.com script begins here -->
+              <script type="text/javascript" defer src="//www.123formbuilder.com/embed/3749019.js" data-role="form" data-default-width="650px"></script>
+              <!-- www.123formbuilder.com script ends here -->
+      </div>
   </div>
 
 </div>
