Relocate inline styling to stylesheet

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="leftColumn">
     <div><a href="https://www.facebook.com">Our Facebook</a></div>
     <div><a href="https://www.facebook.com">Our Twitter</a></div>
-    <div><p style="text-decoration:underline; text-align:center;"><b>Announcements</b></p></div>
+    <div><p id="announcementHeader"><b>Announcements</b></p></div>
     <ul>
       <li>&bull; Announcement 1</li>
       <li>&bull; Announcement 2</li>
@@ -43,8 +43,8 @@
       <a class="navbar-item navbar-inactive" href="specialoffers.html">Special Offers</a>
     </div>
     <div>
-      <img style="width:50%; float:left;" id="gigi" src="img/gigi.jpg">
-      <div style="width:50%; float:right;"><p id="gigiSpeech">Hi there!</p></div>
+      <img id="gigi" src="img/gigi.jpg">
+      <div id="gigiSpeechContainer"><p id="gigiSpeech">Hi there!</p></div>
     </div>
       <div class="section">
               <!-- www.123formbuilder.com script begins here -->
