Add functional previous/next buttons for Gigi speech

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div>
       <img id="gigi" src="img/gigi.jpg">
       <div id="gigiSpeechContainer"><p id="gigiSpeech">Hi there!</p></div>
+      <button id="previous">Previous</button><button id="next">Next</button>
     </div>
       <div class="section">
               <!-- www.123formbuilder.com script begins here -->
