Nikita work in progress.
Added needed html files
Edited the img files
Added the scrolling functional to the left panel
Added the GiGi head for dialog
Changed different styles
Added banner
Added gallery functionality
Added bio
Fixed the refercences on main page
Added the contact info on left panel
Added the right Facebook link, Facebook now opens in the new tab when clicked.

--- a/contactus.html
+++ b/contactus.html
@@ -34,40 +34,20 @@
     <div style="background: url('img/rsz_1banner.png') no-repeat; width: 100%; height: 300px; background-position: center;" ></div>
     <h4>Laundry 101 - Keeping it Clean!</h4>
     <div id="navbarOt">
-      <a class="navbar-item navbar-active"   href="index.html">Home Page</a>
+      <a class="navbar-item navbar-active" 	 href="index.html">Home Page</a>
       <a class="navbar-item navbar-inactive" href="communitypictures.html">Community Pictures</a>
       <a class="navbar-item navbar-inactive" href="services.html">Our Services</a>
       <a class="navbar-item navbar-inactive" href="gigisbio.html">Gigi's Bio</a>
       <a class="navbar-item navbar-inactive" href="specialoffers.html">Special Offers</a>
       <a class="navbar-item navbar-inactive" href="contactus.html">Contact Us</a>
     </div>
-    <div class="gallery">
-  <a target="_blank" href="logo.jpg">
-    <img src="img/logo.jpg" alt="GiGi" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+ <!-- <div> -->
 
-<div class="gallery">
-  <a target="_blank" href="gigi1.jpg">
-    <img src="img/gigi1.jpg" alt="GiGi" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+              <!-- www.123formbuilder.com script begins here -->
+              <!-- <script type="text/javascript" defer src="//www.123formbuilder.com/embed/3749019.js" data-role="form" data-default-width="650px"></script>-->
+              <!-- www.123formbuilder.com script ends here -->
+<!--</div> -->
 
-<div class="gallery">
-  <a target="_blank" href="gigiOG.png">
-    <img src="img/gigiOG.png" alt="GiGi" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="LoadsOfLove.png">
-    <img src="img/LoadsOfLove.png" alt="LoadsOfLove" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
 </div>
 </body>
 </html>
