--- a/gigisbio.html
+++ b/gigisbio.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Laundry 101 - Keeping it clean!</title>
-  
+
   <link rel="stylesheet" type="text/css" href="style/style.css">
   <link rel="stylesheet" type="text/css" href="style/jquery-ui.css">
   <link rel="stylesheet" type="text/css" href="style/jquery.fullPage.css"></script>
@@ -22,21 +22,67 @@
 </head>
 
 <body id="index">
-  
-
   <div id="leftColumn">
-    <p>Facebook location</p>
+    <div><a href="https://www.facebook.com/laundry101nj" target="_blank">Our Facebook</a></div>
+    <div><h3>Opened Daily 8 am - 8 pm</h3></div>
+    <div><h3>101 Leonardville Road Belford, NJ 07718</h3></div>
+    <div><h3>732-495-1856</h3></div>
+    <div><h3>Last Wash 6:30PM</h3></div>
+    <div><h3>Last Dry 7:00PM</h3></div>
   </div>
+<div id="rightColumn">
+    <div style="background: url('img/rsz_1banner.png') no-repeat; width: 100%; height: 300px; background-position: center;" ></div>
+    <h4>Laundry 101 - Keeping it Clean!</h4>
+    <div id="navbarOt">
+      <a class="navbar-item navbar-active"   href="index.html">Home Page</a>
+      <a class="navbar-item navbar-inactive" href="communitypictures.html">Community Pictures</a>
+      <a class="navbar-item navbar-inactive" href="services.html">Our Services</a>
+      <a class="navbar-item navbar-inactive" href="gigisbio.html">Gigi's Bio</a>
+      <a class="navbar-item navbar-inactive" href="specialoffers.html">Special Offers</a>
+      <a class="navbar-item navbar-inactive" href="contactus.html">Contact Us</a>
+    </div>
 
-  <div id="rightColumn">
-    <h1>Laundry 101 - Keeping it Clean!</h1>
-  <div id="navbar" style="text-align:center;">
-    <a class="navbar-item navbar-inactive" href="index.html">Services</a>
-    <a class="navbar-item navbar-inactive" href="index.html">Community Pictures</a>
-    <a class="navbar-item navbar-active" href="index.html">Gigi's Bio</a>
-    <a class="navbar-item navbar-inactive" href="index.html">Special Offers</a>
-  </div>
-  </div>
+    <div>
+      <h1 style="position: center;">Laundry 101 was conceived long before I ever knew it! During middle school in
+the groovy 1970s my mother, Carol assigned me the chores of folding laundry
+and ironing my father’s work shirts (she seemed delighted … I dreaded it).
+Unexpectedly, I found calm in the rhythm of its repetition. Folding laundry
+became my focused thinking time. Creating evenly sized units from a variety of
+clothing, sheets and towels became my bailiwick. I am a draftsperson by trade,
+so each pile of finished laundry is an opportunity for me to create perfect
+geometric symmetry … a specimen of laundry to behold! It’s something I’m
+curiously fond of doing.
+You see, Carol was the quintessential, mid-century modern housewife whose
+calling was in “Home Economics.” Taking good care of the home and the family
+was her essence, her art, and she was revered because of it. Not only was her
+work impressive, but she also made it look effortless. Family, friends,
+entertaining, homemaking!
+My dad, George was the breadwinner who assumed the ‘typical of the time’ male
+responsibilities of yard work and maintaining the cars, while my mom was the
+stitching that held the fabric of the rest of life together for our family.
+I was able to breathe life into Laundry 101 because of Carol and George and
+everything they instilled in me. They nurtured my creative nature, encouraged
+believing in my instincts, promoted the art of listening to and learning from others,
+taught me the value of treating people kindly, to try new things, and for heaven’s
+sake … doing a damn good load of laundry!
+I want you to step into Laundry 101 and leave with the same good feelings that
+Carol gave everybody who came into our home way back when. Let us welcome
+you to our boutique Laundromat with a friendly face and a warm smile, and send
+you off with a freshly scented pile of laundry set in perfectly coiffed corners. You
+won&#39;t find the typical white walled industrial ambiance here at Laundry 101. What
+you will find is warmth, friendliness, cleanliness and a feel good place where
+laundry is less a job, and more an art.
+Meet Gigi … She is the Laundry 101 mascot, a kickass, expert laundress who
+can resolve your toughest laundry challenges in a jiffy. Gigi always has the
+answer. This photo of my mom, circa 1952, inspired her. And her sputnik-like
+china pattern, “Evening Star” by Syracuse China inspired the logo and look for
+my upcoming blog! It’s called “Gigi’s Spin”.
+Thank you for being a loyal customer and for helping to build my business. I
+hope you continue to find value in the service with a smile our fantastic team
+provides. </h1>
+</div>
+<div style="background: url('img/gigiOG.png') no-repeat; width: 100%; height: 800px; background-position: center;" ></div>
+
 
 </div>
 </body>
