--- a/index.html
+++ b/index.html
@@ -22,35 +22,33 @@
 </head>
 
 <body id="index">
-  
-
   <div id="leftColumn">
-    <div><a href="https://www.facebook.com">Our Facebook</a></div>
-    <div><a href="https://www.facebook.com">Our Twitter</a></div>
-    <div><p id="announcementHeader"><b>Announcements</b></p></div>
-    <ul>
-      <li>&bull; Announcement 1</li>
-      <li>&bull; Announcement 2</li>
-    </ul>
+    <div><a href="https://www.facebook.com/laundry101nj" target="_blank">Our Facebook</a></div>
+    <div><h3>Opened Daily 8 am - 8 pm</h3></div>
+    <div><h3>101 Leonardville Road Belford, NJ 07718</h3></div>
+    <div><h3>732-495-1856</h3></div>
+    <div><h3>Last Wash 6:30PM</h3></div>
+    <div><h3>Last Dry 7:00PM</h3></div>
   </div>
   <div id="rightColumn">
-    <h1>Laundry 101 - Keeping it Clean!</h1>
+  	<div style="background: url('img/rsz_1banner.png') no-repeat; width: 100%; height: 300px; background-position: center;" ></div>
+    <h4>Laundry 101 - Keeping it Clean!</h4>
     <div id="navbar">
-      <a class="navbar-item navbar-active" href="index.html">Services</a>
+      <a class="navbar-item navbar-active" 	 href="index.html">Home Page</a>
       <a class="navbar-item navbar-inactive" href="communitypictures.html">Community Pictures</a>
+      <a class="navbar-item navbar-inactive" href="services.html">Our Services</a>
       <a class="navbar-item navbar-inactive" href="gigisbio.html">Gigi's Bio</a>
       <a class="navbar-item navbar-inactive" href="specialoffers.html">Special Offers</a>
+      <a class="navbar-item navbar-inactive" href="contactus.html">Contact Us</a>
     </div>
     <div>
-      <img id="gigi" src="img/gigi.jpg">
+      	<img id="gigi" src="img/gigi.jpg">	</div>
+   <div style="position:fixed; float:right; right:1%">
       <div id="gigiSpeechContainer"><p id="gigiSpeech">Hi there!</p></div>
-      <button id="previous">Previous</button><button id="next">Next</button>
+      <button id="previous"><<</button><button id="next">>></button>
+      <img id="gigiHead" src="img/gigiHead.png" style="height:25%; width:25%;">
     </div>
-      <div class="section">
-              <!-- www.123formbuilder.com script begins here -->
-              <script type="text/javascript" defer src="//www.123formbuilder.com/embed/3749019.js" data-role="form" data-default-width="650px"></script>
-              <!-- www.123formbuilder.com script ends here -->
-      </div>
+     
   </div>
 
 </div>
