--- a/services.html
+++ b/services.html
@@ -41,33 +41,18 @@
       <a class="navbar-item navbar-inactive" href="specialoffers.html">Special Offers</a>
       <a class="navbar-item navbar-inactive" href="contactus.html">Contact Us</a>
     </div>
-    <div class="gallery">
-  <a target="_blank" href="logo.jpg">
-    <img src="img/logo.jpg" alt="GiGi" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+<div><h4> Laundry 101 provides various laundry related services including:</h4></div>
+<div><h4> Self Service Coin Landromat </h4></div>
+<div><h4> Wash & Fold Service </h4> </div>
+<div><h4> Pick Up & Delivery Service </h4> </div>
+<div><h4> Complimentary Wi-Fi</h4></div>
+<div><h4> Our Attendants Are Always On Duty</h4></div>
+<div><h4> Corporate Accounts Are Welcome </h4></div>
 
-<div class="gallery">
-  <a target="_blank" href="gigi1.jpg">
-    <img src="img/gigi1.jpg" alt="GiGi" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
 
-<div class="gallery">
-  <a target="_blank" href="gigiOG.png">
-    <img src="img/gigiOG.png" alt="GiGi" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
 
-<div class="gallery">
-  <a target="_blank" href="LoadsOfLove.png">
-    <img src="img/LoadsOfLove.png" alt="LoadsOfLove" width="300" height="200">
-  </a>
-  <div class="desc">Add a description of the image here</div>
-</div>
+
+
 </div>
 </body>
 </html>
