--- a/specialoffers.html
+++ b/specialoffers.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Laundry 101 - Keeping it clean!</title>
-  
+
   <link rel="stylesheet" type="text/css" href="style/style.css">
   <link rel="stylesheet" type="text/css" href="style/jquery-ui.css">
   <link rel="stylesheet" type="text/css" href="style/jquery.fullPage.css"></script>
@@ -22,21 +22,25 @@
 </head>
 
 <body id="index">
-  
-
   <div id="leftColumn">
-    <p>Facebook location</p>
+    <div><a href="https://www.facebook.com/laundry101nj" target="_blank">Our Facebook</a></div>
+    <div><h3>Opened Daily 8 am - 8 pm</h3></div>
+    <div><h3>101 Leonardville Road Belford, NJ 07718</h3></div>
+    <div><h3>732-495-1856</h3></div>
+    <div><h3>Last Wash 6:30PM</h3></div>
+    <div><h3>Last Dry 7:00PM</h3></div>
   </div>
-
-  <div id="rightColumn">
-    <h1>Laundry 101 - Keeping it Clean!</h1>
-  <div id="navbar" style="text-align:center;">
-    <a class="navbar-item navbar-inactive" href="index.html">Services</a>
-    <a class="navbar-item navbar-inactive" href="index.html">Community Pictures</a>
-    <a class="navbar-item navbar-inactive" href="index.html">Gigi's Bio</a>
-    <a class="navbar-item navbar-active" href="index.html">Special Offers</a>
-  </div>
-  </div>
+<div id="rightColumn">
+    <div style="background: url('img/rsz_1banner.png') no-repeat; width: 100%; height: 300px; background-position: center;" ></div>
+    <h4>Laundry 101 - Keeping it Clean!</h4>
+    <div id="navbarOt">
+      <a class="navbar-item navbar-active"   href="index.html">Home Page</a>
+      <a class="navbar-item navbar-inactive" href="communitypictures.html">Community Pictures</a>
+      <a class="navbar-item navbar-inactive" href="services.html">Our Services</a>
+      <a class="navbar-item navbar-inactive" href="gigisbio.html">Gigi's Bio</a>
+      <a class="navbar-item navbar-inactive" href="specialoffers.html">Special Offers</a>
+      <a class="navbar-item navbar-inactive" href="contactus.html">Contact Us</a>
+    </div>
 
 </div>
 </body>
