href gallery fix
fixed the href to refer to an actual image

--- a/communitypictures.html
+++ b/communitypictures.html
@@ -42,28 +42,28 @@
       <a class="navbar-item navbar-inactive" href="contactus.html">Contact Us</a>
     </div>
     <div class="gallery">
-  <a target="_blank" href="logo.jpg">
+  <a target="_blank" href="img/logo.jpg">
     <img src="img/logo.jpg" alt="GiGi" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="gigi1.jpg">
+  <a target="_blank" href="img/gigi1.jpg">
     <img src="img/gigi1.jpg" alt="GiGi" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="gigiOG.png">
+  <a target="_blank" href="img/gigiOG.png">
     <img src="img/gigiOG.png" alt="GiGi" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
 </div>
 
 <div class="gallery">
-  <a target="_blank" href="LoadsOfLove.png">
+  <a target="_blank" href="img/LoadsOfLove.png">
     <img src="img/LoadsOfLove.png" alt="LoadsOfLove" width="300" height="200">
   </a>
   <div class="desc">Add a description of the image here</div>
